--- a/flaskblog/templates/about.html
+++ b/flaskblog/templates/about.html
@@ -1,15 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
+<h1>About Us</h1><br><br>
 <div class="clearfix">
-    <img class="img-thumbnail" src="{{url_for('static', filename='me.jpeg')}}" width="600" height="240"//>
-    <br>
+    <h3>Explore and get Acknowledged...</h3>
     <br>
     <p>
-        I am EZUDEKUDE IZUCHUKWU FRANCIS, I hails from Ohita in ogbaru local government area..Anambra State
+        <strong>Welcome to MY TECH BLOG</strong> which is an online website that guarantee nice and useful resources for ur learning and for ur career,web belive in sharing knowledge and we are here to help you in your learning process.
     </p>
 
     <p>
-        Am a software developer or web developer to be precise...my track is Backend software engineering,  The programing languages that i have knowledge of currenty is Html, Css, Bootstrap, python, Flask frame work and some basic knowledge of Javascript
+        We are a team of young and enthusiastic people who are passionate about technology and want to share their knowledge with the world. We are here to help you in your learning process. 
     </p>
   
     <p>
