--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -42,7 +42,7 @@
 {% endblock content %}
 <section class="p-5">
   <div class="container">
-    <h3 class="text-center">CONTACT INFO</h3>
+    <h3>CONTACT INFO</h3>
       <ul class="list-group list-group-flush hmmm">
         <li class="list-group-item">Email Address:<span class="fw-bold"> frankizuchukwu094@gmail.com</span></li>
         <li class="list-group-item">Cellphone Number:<span class="fw-bold"> 09092039570</span></li>
@@ -53,4 +53,3 @@
     </div>
     </div>
   </div>
-</section>
