--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -28,6 +28,7 @@
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
               <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
+              <a class="nav-item nav-link" href="{{ url_for('contact') }}">Contact</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
@@ -51,6 +52,9 @@
             {% if messages %}
               {% for category, message in messages %}
                 <div class="alert alert-{{ category }}">
+                  <button type="button" class="m1-2 mb-1 close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
                   {{ message }}
                 </div>
               {% endfor %}
@@ -60,35 +64,16 @@
         </div>
         <div class="col-md-4">
           <div class="content-section">
-            <h3>More Info</h3>
-            <p class='text-muted'>You can pick any of the above
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Tech info</li>
-                <li class="list-group-item list-group-item-light">latest subjects</li>
-                <li class="list-group-item list-group-item-light">News</li>
-                <li class="list-group-item list-group-item-light">subjects</li>
-              </ul>
-            </p>
-          </div>
+            <div class="fmm">
+              <h3>MY TECH BLOG</h3>
+              <p class="lead">A blog about technology</p>
+            </div>
         </div>
       </div>
     </main>
     <br>
     <br>
-    <section class="p-5">
-      <div class="container">
-        <h3>CONTACT INFO</h3>
-          <ul class="list-group list-group-flush hmmm">
-            <li class="list-group-item">Email Address:<span class="fw-bold"> frankizuchukwu094@gmail.com</span></li>
-            <li class="list-group-item">Cellphone Number:<span class="fw-bold"> 09092039570</span></li>
-            <li class="list-group-item">Address:<span class="fw-bold"> Onitsha,Anambra</span></li>
-            <li class="list-group-item">Country:<span class="fw-bold"> Nigeria</span></li>
-            <li class="list-group-item">occupation:<span class="fw-bold"> Web Developer</span></li>
-          </ul>
-        </div>
-        </div>
-      </div>
-    </section>
+
 
     
     <!-- Optional JavaScript -->
