--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -6,7 +6,7 @@
             <div>
                 <h1>Welcome to <span class="text-warning">My Tech Blog</span></h1>
                 <p class="lead">It is a website where by a user can make a post in sharing his/her experience in tech journey or any tech related advice or subject to help a newbie to cope up with learning, you can share topics, opinions wish are very intense in the tech space...relentless to thy words</p>
-                <a class="nav-item nav-link" href="{{ url_for('new_post') }}">
+                <a class="nav-item nav-link" href="{{ url_for('posts.new_post') }}">
                   <button type="button" class="btn btn-primary btn-lg">Make Post</button>
                 </a>
             </div><br>
@@ -20,10 +20,10 @@
           <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
+              <a class="mr-2" href="{{ url_for('users.user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
               <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
             </div>
-            <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+            <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
             <p class="article-content">{{ post.content }}</p>
           </div>
         </article>
@@ -31,9 +31,9 @@
     {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
       {% if page_num %}
         {% if posts.page == page_num %}
-          <a class="btn btn-dark mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+          <a class="btn btn-dark mb-4" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
         {% else %}
-          <a class="btn btn-outline-dark mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+          <a class="btn btn-outline-dark mb-4" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
         {% endif %}
       {% else %}
         ...
