--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -102,13 +102,14 @@ body {
     margin-bottom: 16px;
   }
   
-  .account-heading {
-    font-size: 2.5rem;
-  }
+
+
+
+
 
 
   @media(min-width:768px) {
-    .news{
+    /* .news{
         width:50%;
     }
 
@@ -118,6 +119,10 @@ body {
 
     .sww{
         width:50%;
+    } */
+
+    .text-secondary{
+      font-size: 20px;
     }
 
 }
