--- a/flaskblog/templates/contact.html
+++ b/flaskblog/templates/contact.html
@@ -6,7 +6,7 @@
         <img class="img-thumbnail" src="{{url_for('static', filename='4.png')}}" width="207" height="240"//>
         <div class="card-body">
           <h3 class="card-title mb-3 text-align-center">I AM Cashie_Tech</h3>
-          <p class="card-text">you can contact us on all social media platform, we are available on all kind of work(tech related)</p>
+          <p class="card-text text-dark">you can contact us on all social media platform, we are available on all kind of work(tech related)</p>
           <a href="https://twitter.com/cashie_tech"><i class="bi bi-twitter text-dark mx-1"></i></a>
           <a href="https://web.facebook.com/cashie1012/"><i class="bi bi-facebook text-dark mx-1"></i></a>
           <a href="https://www.linkedin.com/in/francis-ezekude-7362261ba/"><i class="bi bi-linkedin text-dark mx-1"></i></a>
