--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -10,6 +10,12 @@
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
+    <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
+    <script src="https://kit.fontawesome.com/454d3c38d3.js" crossorigin="anonymous"></script>
+
     {% if title %}
         <title>My Tech Blog - {{ title }}</title>
     {% else %}
